# unfolded-circle-spotify-integration

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
scripts/: build-local.sh
uc_intg_spotify/: __init__.py  browser.py  client.py  device.py  media_player.py  remote.py  select.py  sensor.py  setup.py
