[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unfolded-circle-spotify-integration"
dynamic = ["version"]
description = "Spotify integration for Unfolded Circle Remote Two"
authors = [
    {name = "Michael Wood"}
]
readme = "README.md"
license = {text = "MPL-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL-2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Players"
]
keywords = ["spotify", "remote", "home automation", "unfolded circle"]
requires-python = ">=3.11"

dependencies = [
    "ucapi>=0.7.0",
    "ucapi-framework>=1.9.5",
    "aiohttp>=3.9.0",
    "certifi>=2023.0.0",
    "zeroconf>=0.131.0",
]

[project.urls]
Homepage = "https://github.com/mwood77/unfolded-circle-spotify-integration"
"Bug Reports" = "https://github.com/mwood77/unfolded-circle-spotify-integration/issues"
Source = "https://github.com/mwood77/unfolded-circle-spotify-integration"

[tool.setuptools]
packages = ["unfolded-circle-spotify-integration"]

[tool.setuptools.dynamic]
version = {attr = "uc_intg_spotify.__version__"}
